Adicionando método de busca de usuário autenticado e colocando bearer token no swagger
