# src/handler/user/find/response.go
@@ -1,0 +1,7 @@
+package user_handler
+
+import userToken "main/src/entities/user"
+
+type ResponseFindUser struct {
+	Data userToken.User `json:"data"`
+}
